# src/routes/routes.ts
@@ -30,8 +30,10 @@ const models: TsoaRoute.Models = {
             "userId": {"dataType":"string"},
             "name": {"dataType":"string"},
             "recipeDescription": {"dataType":"string"},
-            "prepTime": {"dataType":"double"},
-            "cookTime": {"dataType":"double"},
+            "prepTimeHours": {"dataType":"double"},
+            "prepTimeMinutes": {"dataType":"double"},
+            "cookTimeHours": {"dataType":"double"},
+            "cookTimeMinutes": {"dataType":"double"},
             "ingredients": {"dataType":"array","array":{"dataType":"string"}},
             "instructions": {"dataType":"array","array":{"dataType":"string"}},
         },
